**************************************************
*              2.9 SERIES NEWS                   *
**************************************************

BASIC CONTAINERS

o Added a set of "coerce" methods for turning an arbitrary XStringSet object
  into a BStringSet, DNAStringSet, RNAStringSet or AAStringSet instance (via
  the as() function).

o Added an "append" method for XStringSet objects. An important use case for
  this is to put together a set of short reads and their reverse complements
  in a single DNAStringSet object and then to turn this object into a single
  PDict object (dual PDict object). Then this dual PDict object can be used
  to walk each reference sequence only once (instead of twice) in order to
  get the hits in both strands (+ and -).

o Removed the XStringList class and family.

o Moved the IRanges, UnlockedIRanges, LockedIRanges, NormalIRanges,
  MaskCollection, Views, and XInteger classes and their methods to the new
  IRanges package.

C-LEVEL FACILITIES

UTILITIES

o Added the uniqueLetters() generic function with methods for XString,
  XStringSet, XStringViews and MaskedXString objects.

o Added fasta.info() for fast extraction of the descriptions and lengths of
  the sequences stored in a FASTA file. Also renamed the 'strip.desc' argument
  of readFASTA() -> 'strip.descs'.

o Renamed replaceLetterAtLoc() -> replaceLetterAt() and renamed its 'loc'
  argument -> 'at'. Deprecated replaceLetterAtLoc().

o Added predefined 'RNA_GENETIC_CODE' object.

o Moved the utility functions for importing a mask (read.agpMask(),
  read.gapMask(), read.liftMask(), read.rmMask() and read.trfMask() functions)
  to the new IRanges package.

o Moved the generic functions for width(), shift(), restrict(), narrow(),
  reduce(), gaps(), reverse(), coverage(), subject(), views(), trim(), and
  subviews() to new IRanges package.

STRING MATCHING

o Addition of the 'dups0' slot to the ByPos_MIndex class: this allows a more