@@ -152,7 +152,7 @@ normargUseNames <- function(use.names)
     if (is.null(use.names))
         return(TRUE)
     if (!isTRUEorFALSE(use.names))
-        stop("'use.names' must be 'TRUE' or 'FALSE'")
+        stop("'use.names' must be TRUE or FALSE")
     use.names
 }
 
