@@ -176,7 +176,7 @@ SEXP XStringSet_vmatch_pattern(SEXP pattern, SEXP subject,
 {
 	RoSeq P, S_elt;
 	CachedXStringSet S;
-	int is_count_only, S_length, i;
+	int is_count_only, S_length, i, j;
 	SEXP ans, ans_elt;
 
 	P = _get_XString_asRoSeq(pattern);
@@ -193,10 +193,13 @@ SEXP XStringSet_vmatch_pattern(SEXP pattern, SEXP subject,
 		S_elt = _get_CachedXStringSet_elt_asRoSeq(&S, i);
 		match_pattern(&P, &S_elt, algorithm, max_mismatch, fixed);
 		PROTECT(ans_elt = _reported_matches_asSEXP());
-		if (is_count_only)
+		if (is_count_only) {
 			INTEGER(ans)[i] = INTEGER(ans_elt)[0];
-		else
+		} else {
+			for (j = 0; j < LENGTH(ans_elt); j++)
+				INTEGER(ans_elt)[j] += P.nelt - 1;
 			SET_ELEMENT(ans, i, ans_elt);
+		}
 		UNPROTECT(1);
 		_drop_current_matches();
 	}
