@@ -1,5 +1,5 @@
 **************************************************
-*              2.9 SERIES NEWS                   *
+*              2.10 SERIES NEWS                  *
 **************************************************
 
 BASIC CONTAINERS
@@ -46,6 +46,11 @@ o Moved the generic functions for width(), shift(), restrict(), narrow(),
   subviews() to new IRanges package.
 
 STRING MATCHING
+
+o Added the vmatchPattern() and vcountPattern() generic functions with
+  methods for XStringSet objects. They are the vectorized versions of
+  matchPattern()/countPattern() i.e. the subject must be an XStringSet
+  object (support for XStringViews objects will follow soon).
 
 o Addition of the 'dups0' slot to the ByPos_MIndex class: this allows a more
   compact representation in memory of a ByPos_MIndex object that holds the
